--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "belajar-npm",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "sukmarangga-react-component",
+  "version": "1.0.1",
+  "description": "belajar buat react component",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-lib": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   "homepage": "https://github.com/sukmaranggapradeta/belajar-npm#readme",
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-essentials": "^6.4.18",
     "@storybook/addon-knobs": "^6.4.0",
@@ -28,7 +31,12 @@
     "babel-loader": "^8.2.3",
     "polished": "^4.1.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rollup": "^2.67.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
