--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-lib": "rollup -c"
+    "build-lib": "rollup -c",
+    "chromatic": "npx chromatic --project-token=064c79d00f37"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@storybook/addon-links": "^6.4.18",
     "@storybook/react": "^6.4.18",
     "babel-loader": "^8.2.3",
+    "chromatic": "^6.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.67.1",
